# margo-specification

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: .dockerfile
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: 3-problem-statement.yml
.github/workflows/: pages.yml
app-interoperability/application-package-definition/: index.html
app-interoperability/local-registries/: index.html
app-interoperability/publishing-application-observability-data/: index.html
app-interoperability/workload-orch-to-app-reg-interaction/: index.html
device-interoperability/collecting-application-observability-data/: index.html
device-interoperability/device-requirements/: index.html
doc-generation/: check-examples.bash  generate-documentation.bash
doc-generation/configurations/: application-description.json  desired-state-api.json
margo-api-reference/margo-api-specification/: index.html
margo-overview/application-observability-overview/: index.html
margo-overview/introduction-system-design/: index.html
margo-overview/personas/: index.html
margo-overview/technical-lexicon/: index.html
orchestration/workload/consuming-application-observability-data/: index.html
orchestration/workload/device-capability-reporting/: index.html
orchestration/workload/workload-deployment/: index.html
orchestration/workload/workload-management-interface-breakdown/: index.html
search/: search_index.json
src/app-interoperability/: application-package-definition.linkml.yaml
system-design/app-interoperability/: .gitignore
(+20 files in other folders)
